--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
   "devDependencies": {
     "browserify": "^13.1.1",
     "nodemon": "^2.0.7",
-    "snyk": "^1.244.0"
+    "snyk": "^1.244.0",
+    "stimulus_reflex": "3.4.1"
   },
   "license": "Apache-2.0"
 }
