--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
     "stream-buffers": "^3.0.1",
     "tap": "^11.1.3",
     "typeorm": "^0.2.24",
-    "validator": "^13.5.2"
+    "validator": "^13.5.2",
+    "stimulus_reflex": "3.4.1"
   },
   "devDependencies": {
     "browserify": "^13.1.1",
     "nodemon": "^2.0.7",
-    "snyk": "^1.244.0",
-    "stimulus_reflex": "3.4.1"
+    "snyk": "^1.244.0"
   },
   "license": "Apache-2.0"
 }
