--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,15 @@
-name: "Snyk Scan"
-
-on:
-  push:
-    branches:
-      - 'demo*'  # Include any branch starting with demo
-
+name: "Example workflow for Node using Snyk"
+on: push
+branches:
+    - 'demo*'  # Include any branch starting with demo
 jobs:
-  Pipeline-Job:
-    # Configure Environment
-    name: 'Snyk Scan'
+  security:
     runs-on: ubuntu-latest
-    env:
-      SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-
     steps:
-      # Checkout Code
-      - name: Checkout Code
-        uses: actions/checkout@v1
-
-      # Install and Authenticate to Snyk
-      - name: Install Snyk & Authenticate
-        run: |
-          sudo npm install -g snyk
-          sudo npm install -g snyk-delta
-          sudo npm install -g snyk-filter
-          snyk auth ${SNYK_TOKEN}
-      # Run Snyk Code
-      - name: Run Snyk Code
-        run: |
-          snyk code test --report --project-name="GH_ACTION_CI" --severity-threshold=high 
-        continue-on-error: true
-      # Run Snyk OS
-      - name: Run Snyk OS Delta
-        run: |
-          snyk test --json --print-deps | snyk-delta --baselineOrg 6d36ac7a-c75b-4179-8e73-6dd4d3fc8343 --baselineProject 17a2bb65-9e50-4277-9f0e-612006e9347a --setPassIfNoBaseline true
-        continue-on-error: true
-      - name: Run Snyk OS CVSS 9 or >
-        run: |
-          snyk test --json | snyk-filter -f ${{ github.workspace }}/filters/example-cvss-9-or-above.yml --Org=6d36ac7a-c75b-4179-8e73-6dd4d3fc8343
-        continue-on-error: true
+      - uses: actions/checkout@master
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --severity-threshold=high
